--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,5 @@ services:
 before_install:
   - docker build -t janbabs/docker-react -f Dockerfile.dev . 
 
+script:
+  - docker run -e CI=true janbabs/docker-react npm run test
